--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Effective JavaScript: Frogger</title>
 	<link rel="stylesheet" href="css/style.css">
+	<h1>Score : <span id="score">0</span></h1>
 </head>
 
 <body>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="js/resources.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/engine.js"></script>
